src/test/deca/context/invalid/pierre/objects/voidParameters.deca
class A {
    void no(void bad){}
}
{}